# theron

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  PRD.md  README.md  docker-compose.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude/skills/: frontend-design.md
config/: default.yaml
examples/agents/: moltbot.yaml
scripts/: test_attack.sh  test_security.py
src/theron/: __init__.py  __main__.py  config.py  main.py  patterns.py  setup.py
src/theron/agents/: __init__.py  installer.py  registry.py  runner.py
src/theron/autonomy/: __init__.py  degradation.py  permissions.py  shadow.py
src/theron/dashboard/: __init__.py  api.py  websocket.py
src/theron/intelligence/: __init__.py  causal.py  exfiltration.py  hijack.py  honeypot.py  manager.py  taint.py
src/theron/learning/: __init__.py  anomaly.py  baseline.py  profile.py
src/theron/proxy/: __init__.py  anthropic.py  common.py  openai.py  server.py
src/theron/sandbox/: __init__.py  container.py  result.py
src/theron/security/: __init__.py  classifier.py  detector.py  gating.py  middleware.py  tagger.py
src/theron/static/: app.js  index.html  style.css
src/theron/storage/: __init__.py  database.py  models.py
static/: app.js  index.html  style.css
tests/: __init__.py  test_autonomy.py  test_classifier.py  test_detector.py  test_gating.py  test_intelligence.py  test_sandbox.py  test_setup.py
tests/fixtures/: injection_samples.json
