[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theron"
version = "0.2.0"
description = "Security layer for agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Mukund" }
]
keywords = ["ai", "security", "proxy", "llm", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/Mukund2/theron"
Repository = "https://github.com/Mukund2/theron"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
theron = "theron.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/theron"]

[tool.hatch.build]
include = [
    "src/theron/**/*.py",
    "src/theron/static/*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
